--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,5 +1,5 @@
 <footer class="section section-primary" id="block-4" xmlns:th="http://www.w3.org/1999/xhtml">
-    <div class="container" align="center">
+   <!-- <div class="container" align="center">
         <div class="row">
             <div class="col-md-12">
                 <h4 class="text-center">footer</h4>
@@ -23,7 +23,7 @@
                 <p class="text-left"><br>We are glad to be helpful</p>
             </div>
         </div>
-    </div>
+    </div>-->
 </footer>
 </body>
 </html>
