--- a/src/main/resources/templates/showFail.html
+++ b/src/main/resources/templates/showFail.html
@@ -1,12 +1,15 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>No files found</title>
+    <title>Upload failed</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <div th:include="header :: header"></div>
+<div align="center">
 <body>
-<h2 align="center">There is no uploaded files</h2><br>
+<h2>Sorry, your file is too large</h2><br>
+<h5>or something gone wrong</h5>
+</div>
 </body>
 <div th:include="footer :: footer"></div>
 </html>
