--- a/src/main/resources/templates/showFail.html
+++ b/src/main/resources/templates/showFail.html
@@ -7,8 +7,8 @@
 <div th:include="header :: header"></div>
 <div align="center">
 <body>
-<h2>Sorry, your file is too large</h2><br>
-<h5>or something gone wrong</h5>
+<h2>Sorry, something gone wrong</h2><br>
+<h5>be patient</h5>
 </div>
 </body>
 <div th:include="footer :: footer"></div>
