--- a/src/main/resources/templates/showOne.html
+++ b/src/main/resources/templates/showOne.html
@@ -1,4 +1,10 @@
-<div th:replace="header :: header"></div>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>All uploads</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+</head>
+<div th:include="header :: header"></div>
 <body>
 <h2 align="center">File successfully uploaded!</h2><br>
 <h4 align="center">Upload info:</b></h4>
@@ -10,22 +16,22 @@
                     <table border="1" align="center" cellspacing="0" cellpadding="10">
                         <thead>
                         <tr>
+                            <th>Surname</th>
+                            <th>ID</th>
                             <th>Filename</th>
                             <th>Filesize</th>
-                            <th>ID</th>
-                            <th>Surname</th>
                             <th>Date</th>
                             <th>Action</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
-                            <td<a th:href="@{'/download/' + ${id}}" th:text="${filename}"></a></td>
-                            <td><p th:text="${filesize}"/></td>
-                            <td><p th:text="${id}"/></td>
-                            <td><p th:text="${name}"/></td>
-                            <td><p th:text="${date}"/></td>
-                            <td<a th:href="@{'/remove/' + ${id}}" th:text="remove"></a></td>
+                            <td th:text="${upload.name}"></td>
+                            <td th:text="${upload.id}"></td>
+                            <td<a th:href="@{'/download/' + ${upload.id}}" th:text="${upload.filename}"></a></td>
+                            <td th:text="${upload.filesize} + Bytes"></td>
+                            <td th:text="${upload.date}"></td>
+                            <td<a th:href="@{'/remove/' + ${upload.id}}" th:text="remove"></a></td>
                         </tr>
                         </tbody>
                     </table>
